[gd_scene load_steps=21 format=2]

[ext_resource path="res://exercises/tutorial/tutorial_4.gd" type="Script" id=1]
[ext_resource path="res://assets/ui/fonts/roboto/Roboto_Condensed_Regular_3.tres" type="DynamicFont" id=2]
[ext_resource path="res://assets/ui/fonts/roboto/Roboto_Regular_5.tres" type="DynamicFont" id=3]
[ext_resource path="res://modular/CloseBar.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/ui/fonts/roboto/Roboto_Condensed_Regular_2.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/ui/icons/reset-right-line.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/logos/optalert-logo.png" type="Texture" id=13]

[sub_resource type="StyleBoxFlat" id=13]
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
shadow_color = Color( 0, 0, 0, 0.25098 )
shadow_size = 20

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 0.54902, 0.54902, 0.552941, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0.85, 0.85, 0.85, 1 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.75, 0.75, 0.75, 1 )

[sub_resource type="StyleBoxEmpty" id=17]

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0.364706, 0.364706, 0.364706, 1 )

[sub_resource type="StyleBoxFlat" id=26]
bg_color = Color( 0.57, 0.57, 0.57, 1 )
border_width_left = 10
border_width_top = 20
border_width_right = 10
border_width_bottom = 20
border_color = Color( 0.45, 0.45, 0.45, 1 )

[sub_resource type="StyleBoxFlat" id=27]
bg_color = Color( 0.57, 0.57, 0.57, 1 )
border_width_left = 10
border_width_top = 20
border_width_right = 10
border_width_bottom = 20
border_color = Color( 0.58, 0.58, 0.58, 1 )

[sub_resource type="StyleBoxFlat" id=29]
bg_color = Color( 0.85, 0.85, 0.85, 1 )
border_width_left = 6
border_width_right = 6

[sub_resource type="StyleBoxFlat" id=30]
bg_color = Color( 0.57, 0.57, 0.57, 1 )
border_width_left = 10
border_width_top = 20
border_width_right = 10
border_width_bottom = 20
border_color = Color( 0.35, 0.35, 0.35, 1 )

[node name="Tutorial_4" type="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_styles/panel = SubResource( 13 )
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 2
custom_constants/margin_top = 2
custom_constants/margin_left = 2
custom_constants/margin_bottom = 2

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 1022.0
margin_bottom = 598.0

[node name="Control" type="Control" parent="MarginContainer"]
margin_left = 2.0
margin_top = 2.0
margin_right = 1022.0
margin_bottom = 598.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Control"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="CloseBar" parent="MarginContainer/Control/VBoxContainer" instance=ExtResource( 4 )]

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/Control/VBoxContainer"]
margin_top = 36.0
margin_right = 1020.0
margin_bottom = 126.0
rect_min_size = Vector2( 0, 80 )
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/Control/VBoxContainer/MarginContainer2"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1015.0
margin_bottom = 85.0

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Control/VBoxContainer/MarginContainer2/HBoxContainer2"]
margin_right = 250.0
margin_bottom = 80.0
rect_min_size = Vector2( 250, 80 )
texture = ExtResource( 13 )
expand = true
stretch_mode = 5

[node name="RichTextLabel" type="Label" parent="MarginContainer/Control/VBoxContainer/MarginContainer2/HBoxContainer2"]
margin_left = 254.0
margin_top = 20.0
margin_right = 1010.0
margin_bottom = 60.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
custom_colors/font_color = Color( 0.411765, 0.780392, 0.756863, 1 )
custom_fonts/font = ExtResource( 3 )
text = "Resumen de Riesgos"
align = 1
valign = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Control/VBoxContainer"]
margin_top = 130.0
margin_right = 1020.0
margin_bottom = 596.0
rect_min_size = Vector2( 0, 170 )
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_left = 5

[node name="Panel2" type="Panel" parent="MarginContainer/Control/VBoxContainer/MarginContainer"]
margin_left = 5.0
margin_right = 1015.0
margin_bottom = 466.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Control/VBoxContainer/MarginContainer/Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/Control/VBoxContainer/MarginContainer/Panel2/MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 1006.0
margin_bottom = 462.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Control/VBoxContainer/MarginContainer/Panel2/MarginContainer/VBoxContainer"]
margin_right = 1002.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
size_flags_horizontal = 3
alignment = 2

[node name="Label" type="Label" parent="MarginContainer/Control/VBoxContainer/MarginContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 658.0
margin_right = 800.0
margin_bottom = 40.0
size_flags_vertical = 7
size_flags_stretch_ratio = 2.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "Periodo de tiempo desde:"
valign = 1

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Control/VBoxContainer/MarginContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 804.0
margin_right = 944.0
margin_bottom = 40.0
rect_min_size = Vector2( 140, 0 )
custom_constants/margin_right = 2
custom_constants/margin_top = 8
custom_constants/margin_left = 2
custom_constants/margin_bottom = 8

[node name="TimeTextBox" type="LineEdit" parent="MarginContainer/Control/VBoxContainer/MarginContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer/MarginContainer"]
unique_name_in_owner = true
margin_left = 2.0
margin_top = 8.0
margin_right = 138.0
margin_bottom = 32.0
custom_colors/selection_color = Color( 0.447059, 0.788235, 0.917647, 0.658824 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
custom_styles/focus = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
align = 1
caret_blink = true
caret_blink_speed = 0.5

[node name="RefreshButton" type="Button" parent="MarginContainer/Control/VBoxContainer/MarginContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
margin_left = 948.0
margin_right = 988.0
margin_bottom = 40.0
rect_min_size = Vector2( 40, 40 )
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 16 )
custom_styles/focus = SubResource( 17 )
custom_styles/normal = SubResource( 18 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Control/VBoxContainer/MarginContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer/RefreshButton"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="TextureRect" type="TextureRect" parent="MarginContainer/Control/VBoxContainer/MarginContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer/RefreshButton/MarginContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_left = 4.0
margin_top = 4.0
margin_right = 36.0
margin_bottom = 36.0
texture = ExtResource( 6 )
expand = true

[node name="Control" type="Control" parent="MarginContainer/Control/VBoxContainer/MarginContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 992.0
margin_right = 1002.0
margin_bottom = 40.0
rect_min_size = Vector2( 10, 0 )

[node name="Panel" type="Panel" parent="MarginContainer/Control/VBoxContainer/MarginContainer/Panel2/MarginContainer/VBoxContainer"]
margin_top = 44.0
margin_right = 1002.0
margin_bottom = 458.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 2 )

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Control/VBoxContainer/MarginContainer/Panel2/MarginContainer/VBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="VBoxContainer2" type="VBoxContainer" parent="MarginContainer/Control/VBoxContainer/MarginContainer/Panel2/MarginContainer/VBoxContainer/Panel/MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 998.0
margin_bottom = 410.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/Control/VBoxContainer/MarginContainer/Panel2/MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer2"]
margin_right = 994.0
margin_bottom = 40.0
rect_min_size = Vector2( 0, 40 )
custom_constants/separation = 3

[node name="Control2" type="Control" parent="MarginContainer/Control/VBoxContainer/MarginContainer/Panel2/MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer2/HBoxContainer"]
margin_right = 5.0
margin_bottom = 40.0
rect_min_size = Vector2( 5, 0 )

[node name="Panel" type="Panel" parent="MarginContainer/Control/VBoxContainer/MarginContainer/Panel2/MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer2/HBoxContainer"]
margin_left = 8.0
margin_right = 126.0
margin_bottom = 40.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 12 )

[node name="Label" type="Label" parent="MarginContainer/Control/VBoxContainer/MarginContainer/Panel2/MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer2/HBoxContainer/Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Operador"
align = 1
valign = 1

[node name="Panel2" type="Panel" parent="MarginContainer/Control/VBoxContainer/MarginContainer/Panel2/MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer2/HBoxContainer"]
margin_left = 129.0
margin_right = 247.0
margin_bottom = 40.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 12 )

[node name="Label" type="Label" parent="MarginContainer/Control/VBoxContainer/MarginContainer/Panel2/MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer2/HBoxContainer/Panel2"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Sitio"
align = 1
valign = 1

[node name="Panel3" type="Panel" parent="MarginContainer/Control/VBoxContainer/MarginContainer/Panel2/MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer2/HBoxContainer"]
margin_left = 250.0
margin_right = 333.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.7
custom_styles/panel = SubResource( 12 )

[node name="Label" type="Label" parent="MarginContainer/Control/VBoxContainer/MarginContainer/Panel2/MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer2/HBoxContainer/Panel3"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Turno"
align = 1
valign = 1

[node name="Panel4" type="Panel" parent="MarginContainer/Control/VBoxContainer/MarginContainer/Panel2/MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer2/HBoxContainer"]
margin_left = 336.0
margin_right = 454.0
margin_bottom = 40.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 12 )

[node name="Label" type="Label" parent="MarginContainer/Control/VBoxContainer/MarginContainer/Panel2/MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer2/HBoxContainer/Panel4"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Identificador"
align = 1
valign = 1

[node name="Panel5" type="Panel" parent="MarginContainer/Control/VBoxContainer/MarginContainer/Panel2/MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer2/HBoxContainer"]
margin_left = 457.0
margin_right = 575.0
margin_bottom = 40.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 12 )

[node name="Label" type="Label" parent="MarginContainer/Control/VBoxContainer/MarginContainer/Panel2/MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer2/HBoxContainer/Panel5"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Cuenta de alerta <<"
align = 1
valign = 1

[node name="Panel6" type="Panel" parent="MarginContainer/Control/VBoxContainer/MarginContainer/Panel2/MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer2/HBoxContainer"]
margin_left = 578.0
margin_right = 696.0
margin_bottom = 40.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 12 )

[node name="Label" type="Label" parent="MarginContainer/Control/VBoxContainer/MarginContainer/Panel2/MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer2/HBoxContainer/Panel6"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Riesgo alto (RA)"
align = 1
valign = 1

[node name="Panel7" type="Panel" parent="MarginContainer/Control/VBoxContainer/MarginContainer/Panel2/MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer2/HBoxContainer"]
margin_left = 699.0
margin_right = 817.0
margin_bottom = 40.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 12 )

[node name="Label" type="Label" parent="MarginContainer/Control/VBoxContainer/MarginContainer/Panel2/MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer2/HBoxContainer/Panel7"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Riesgo medio (RM)"
align = 1
valign = 1

[node name="Panel8" type="Panel" parent="MarginContainer/Control/VBoxContainer/MarginContainer/Panel2/MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer2/HBoxContainer"]
margin_left = 820.0
margin_right = 986.0
margin_bottom = 40.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 1.4
custom_styles/panel = SubResource( 12 )

[node name="Label" type="Label" parent="MarginContainer/Control/VBoxContainer/MarginContainer/Panel2/MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer2/HBoxContainer/Panel8"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 0
size_flags_vertical = 3
custom_fonts/font = ExtResource( 2 )
text = "Ultimo evento"
align = 1
valign = 1

[node name="Control" type="Control" parent="MarginContainer/Control/VBoxContainer/MarginContainer/Panel2/MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer2/HBoxContainer"]
margin_left = 989.0
margin_right = 994.0
margin_bottom = 40.0
rect_min_size = Vector2( 5, 0 )

[node name="RiskSummaryRowScrollContainer" type="ScrollContainer" parent="MarginContainer/Control/VBoxContainer/MarginContainer/Panel2/MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer2"]
unique_name_in_owner = true
margin_top = 44.0
margin_right = 994.0
margin_bottom = 406.0
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/Control/VBoxContainer/MarginContainer/Panel2/MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer2/RiskSummaryRowScrollContainer"]
margin_right = 994.0
margin_bottom = 362.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 7

[node name="RiskSummaryRowContainer" type="VBoxContainer" parent="MarginContainer/Control/VBoxContainer/MarginContainer/Panel2/MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer2/RiskSummaryRowScrollContainer/MarginContainer"]
unique_name_in_owner = true
margin_right = 987.0
margin_bottom = 362.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VScrollBar" type="VScrollBar" parent="MarginContainer/Control/VBoxContainer/MarginContainer/Panel2/MarginContainer/VBoxContainer/Panel/MarginContainer/VBoxContainer2/RiskSummaryRowScrollContainer"]
unique_name_in_owner = true
visible = false
margin_right = 12.0
margin_bottom = 362.0
rect_min_size = Vector2( 10, 0 )
size_flags_vertical = 3
custom_styles/grabber_highlight = SubResource( 26 )
custom_styles/grabber = SubResource( 27 )
custom_styles/scroll_focus = SubResource( 29 )
custom_styles/scroll = SubResource( 29 )
custom_styles/grabber_pressed = SubResource( 30 )
value = 50.0

[connection signal="close" from="MarginContainer/Control/VBoxContainer/CloseBar" to="." method="_on_CloseBar_close"]
[connection signal="pressed" from="MarginContainer/Control/VBoxContainer/MarginContainer/Panel2/MarginContainer/VBoxContainer/HBoxContainer/RefreshButton" to="." method="_on_RefreshButton_pressed"]
